--- a/index.html
+++ b/index.html
@@ -141,12 +141,10 @@
   </div>
   <div class="rightFooter">
     <button>Request Invite</button>
-    <p>© Easybank. All Rights Reserved</p>
   </div>
 </footer>
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-    Coded by <a href="#">Raymond</a>.
+    &copy; 2024 Franco. All rights reserved
   </div>
   <script src="script.js"></script>
 </body>
